src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <description>This field has locale of user if available or gets the locale of Organization</description>
        <inlineHelpText>This field has locale of user if available or gets the locale of Organization</inlineHelpText>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Cart_Export__c</fullName>
        <formula>IF($User.Id == OwnerId,IF(APTS_MSPA_Line_Rollup_Summay__c = 0, NULL, 
HYPERLINK(&quot;/&quot;&amp;$Setup.APTS_Reports_Id__c.APTS_MSPAs_with_Agreement_Line_Items__c&amp;&quot;?pv0=&quot;&amp;Id,IMAGE(&quot;/resource/1444242183000/MSPAcartExport&quot;,&quot;MSPA Cart Export&quot;), 
&quot;_self&quot;)),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPA Cart Export</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_End_Date__c</fullName>
        <description>MSPA End Date Coming from Quotation</description>
        <label>MSPA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_From_Quote__c</fullName>
        <description>Field to hold the action used for creating the MSPA from Quote by Sales Rep.</description>
        <inlineHelpText>Field to hold the action used for creating the MSPA from Quote by Sales Rep.</inlineHelpText>
        <label>APTS_MSPA_From_Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Scratch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Without Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Line_Rollup_Summay__c</fullName>
        <description>Count number of records exist in MSPA Line Item related list.</description>
        <label>MSPA Line Rollup Summay</label>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Start_Date__c</fullName>
        <label>MSPA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_without_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value it checked and if Related Quotation Status = &quot;Approved&quot; then the Status of MSPA will also be approved LP Spain</description>
        <label>Create MSPA without Changes</label>
        <type>Checkbox</type>
    </fields>
<fields>
        <fullName>APTS_Manually_Create_MSPA_in_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Create MSPA in SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Need_To_Block_MSPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To hide Block MSPA button based on Agreement SAP Settings</description>
        <label>Need To Block MSPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Term_Description__c</fullName>
        <description>Field to hold the description value of Payment Term in format of &quot;Code - Description&quot;. Value for this field is populated from Apttus LSO data.</description>
        <inlineHelpText>Auto populated using information from the Quotation or from the Buying Account (LOD selected)</inlineHelpText>
        <label>Payment Terms (Do not use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto populated using information from the Quotation or from the Buying Account (LOD selected)</inlineHelpText>
        <label>Payment Terms</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Payment Term</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Agreements (Payment Terms)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
 <fields>
        <fullName>APTS_Present__c</fullName>
        <formula>/*
IF (OR(ISPICKVAL( Apttus__Status__c ,&quot;Approved&quot;), ISPICKVAL( Apttus__Status__c ,&quot;Generated&quot;)),HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;), &quot;_self&quot;), NULL)

--&gt; commented out for ABBLP-365
*/

IF (OR(ISPICKVAL( Apttus__Status__c ,&quot;Presented&quot;), ISPICKVAL( Apttus__Status__c ,&quot;Generated&quot;)),HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;), &quot;_self&quot;), NULL)</formula>
        <inlineHelpText>This button will be visible once MSPA is approved</inlineHelpText>
        <label>Present</label>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>APTS_Preview__c</fullName>
        <description>Custom Preview link. Its visibility is based on agreement status.</description>
        <formula>IF(OR($User.Id == OwnerId, CONTAINS(APTS_Approver_User_IDs__c,$User.Id) ),IF ( AND ( LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0 , RecordType.Name ==  $Setup.APTS_Agreement_Record_Type__c.APTS_Default_Record_Type__c , NOT(ISNULL(Apttus_CMConfig__ConfigurationFinalizedDate__c))), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;), NULL),NULL)</formula>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Discounts__c</fullName>
        <label>Product Discounts</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Id__c</fullName>
        <description>Quotation Id from Quote</description>
        <label>Quotation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>APTS_Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Related_Quotation_Status__c</fullName>
        <description>Status of Related Quote Proposal LP Spain</description>
        <formula>TEXT( Apttus_QPComply__RelatedProposalId__r.Apttus_Proposal__Approval_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Quotation Status</label>
        <type>Text</type>
    </fields>
    <fields>
	<fullName>APTS_SAP_Customer_ID__c</fullName>
	<description>Field to hold the value of Sold To customer ID in SAP fetched from LRD.</description>
	<inlineHelpText>Matching Sold To ID in SAP</inlineHelpText>
	<label>SAP Customer ID</label>
	<length>255</length>
	<type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division__c</fullName>
        <description>SAP Division the value of which is populated from Account Local Reference Data.</description>
        <label>SAP Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Reference_No__c</fullName>
        <externalId>true</externalId>
        <label>MSPA Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Identifier__c</fullName>
        <description>SPA Identifier will be used as a reference to MSPA Line Item.</description>
        <label>SPA Identifier</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office_Code__c</fullName>
        <description>Field to hold value of Sales Office codes to be selected by user.</description>
        <inlineHelpText>Auto populated from User Profile</inlineHelpText>
        <label>Sales Office (Do not use picklist)</label>
        <picklist>
            <picklistValues>
                <fullName>Z111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z113</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAPZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBN9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZICE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
  <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto populated from User Profile</inlineHelpText>
        <label>Sales Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.APTS_Country__c</field>
                <operation>equals</operation>
                <valueField>LSO_Field_Entries__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LSO_Field_Entries__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements_Sales_Office</relationshipName>
        <type>Lookup</type>
    </fields>
<fields>
        <fullName>APTS_Submit_for_Approval__c</fullName>
        <formula>IF($User.Id == OwnerId,IF(NOT(ISNULL(Apttus_CMConfig__ConfigurationFinalizedDate__c)),IF(APTS_LP_No_Approval_Rule_Matched__c,&apos;ERROR ON CART, REFER ACTIVITY HIST&apos;, 
IF(AND(OR(ISPICKVAL(Apttus__Status__c ,&apos;Recalled&apos;) 
,AND(ISPICKVAL( Apttus__Status__c ,&apos;Draft&apos;),APTS_Approval_Required__c ) 
)), HYPERLINK(&quot;/apex/APTS_ApprovalSubmit?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_SubmitForApproval&quot;, &quot;Submit for Approval&quot;),&quot;_self&quot;), NULL) 
),$Label.APTS_MSPA_Finzalization_Required),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_of_Payment__c</fullName>
        <label>Payment Terms (Do not use )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Agreement_Value__c</fullName>
        <label>Total Agreement Value</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Net_Price__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_isClone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Variable is used to determine whether agreement created is clone or from quote</description>
        <label>isClone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Preview_Status__c</fullName>
        <label>Approval Preview Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved but Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
 <fields>
        <fullName>Apttus_Approval__LineItem_Approval_Status__c</fullName>
        <description>The overall approval status for line items associated with the agreement</description>
        <inlineHelpText>The overall approval status for line items associated with the agreement</inlineHelpText>
        <label>Line Item Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Term_Exception_Approval_Status__c</fullName>
        <description>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</description>
        <inlineHelpText>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</inlineHelpText>
        <label>Term Exception Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order associated with the agreement will be automatically activated when the agreement is executed.</description>
        <inlineHelpText>Indicates whether the order associated with the agreement will be automatically activated when the agreement is executed.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account associated with the agreement</description>
        <inlineHelpText>ID of the bill to account associated with the agreement</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Bill To)</relationshipLabel>
        <relationshipName>AgreementsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationFinalizedDate__c</fullName>
        <description>Date when the configuration was finalized for the agreement</description>
        <label>Configuration Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the agreement</description>
        <inlineHelpText>Date when the configuration was synchronized for the agreement</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Configure__c</fullName>
        <description>Configure products for the agreement</description>
        <formula>IF ( LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/AgreementConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the agreement</description>
        <inlineHelpText>ID of the payment term associated with the agreement</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PricingDate__c</fullName>
        <description>The pricing date. The product list price is determined based on this date.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account associated with the agreement</description>
        <inlineHelpText>ID of the ship to account associated with the agreement</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Ship To)</relationshipLabel>
        <relationshipName>AgreementsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SyncWithOpportunity__c</fullName>
        <description>Synchronize the agreement with the associated opportunity</description>
        <formula>IF ( LEN(Apttus__Related_Opportunity__c ) &gt; 0, HYPERLINK(&quot;/apex/AgreementSyncWithOpportunity?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_SynchronizeWithOpportunity&quot;, &quot;Sync with Opportunity&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synchronize with Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPComply__RelatedProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Account_Search_Field__c</fullName>
        <description>This field is used in the side bar search</description>
        <externalId>true</externalId>
        <label>Account Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the account record to identify the external party to this agreement</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001Xl0UEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who activated the agreement in the system</description>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APTS_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_Date__c</fullName>
        <description>The date the agreement was activated in the system</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>Used to categorize agreement types.  When setting up a new agreement type make sure to seect approrpiate values for that agreement type and to set the right default</description>
        <label>Agreement Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Number__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowableOutputFormats__c</fullName>
        <description>The list of output formats allowed for the agreement.</description>
        <inlineHelpText>The list of output formats allowed for the agreement.</inlineHelpText>
        <label>Allowable Output Formats</label>
        <picklist>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Amendment_Effective_Date__c</fullName>
        <description>The date this amendment is effective</description>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether consent is required to extend / renew this agreement</description>
        <label>Renewal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Term_Months__c</fullName>
        <description>The number of months to extend the agreement</description>
        <label>Renewal Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal_Terms__c</fullName>
        <description>Specifies any terms for renewal</description>
        <label>Renewal Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement has an auto renewal provision</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corporate Business Hours associated with the agreement</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify internal signatory</description>
        <label>Company Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0CEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Date__c</fullName>
        <description>Date when internal signatory signed</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Title__c</fullName>
        <description>Title of person signing on behalf of Company</description>
        <label>Company Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Duration_Days__c</fullName>
        <description>The duration from Start Date to End Date in days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_End_Date__c &gt;= Apttus__Contract_Start_Date__c)),  (Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c) + 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_End_Date__c</fullName>
        <description>The end date for this agreement</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Number__c</fullName>
        <description>The system assigned unique agreement number.  FOR INTERNAL USE ONLY.  DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Start_Date__c</fullName>
        <description>The effective date of the agreement</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contracted_Days__c</fullName>
        <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
        <formula>IF(AND(NOT(ISNULL(Apttus__Contract_Start_Date__c )), ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)), (TODAY() - Apttus__Contract_Start_Date__c ) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Detailed description of this agreement</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Executed_Copy_Mailed_Out_Date__c</fullName>
        <description>Date the final, executed copy was mailed to the other party</description>
        <label>Executed Copy Mailed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Agreement_Number__c</fullName>
        <description>Identifies the agreement number, including the version number.  Use this field to display on screens, reports, dashboards, search filters and columns, etc.  The other agreement number fields are for internal use only.</description>
        <formula>Apttus__Agreement_Number__c  &amp; &quot;.&quot; &amp;  TEXT(CEILING(Apttus__Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Amend__c</fullName>
        <description>Amend the agreement</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)))), HYPERLINK(&quot;/apex/Apttus__AgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;),NULL)</formula>
        <inlineHelpText>Amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Text</type>
    </fields>
</CustomObject>